[package]
name = "Pregnancy-OSC"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.6"
lazy_static = "1.5.0"
rosc = "0.11"
tokio = { version = "1.35.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = {version = "0.12.12", features = ["blocking"] }
json-pointer = "0.3.4"
log = "0.4.26"
chrono = "0.4.41"
dirs = "6.0.0"
dotenv = "0.15.0"
eframe = "0.31.1"
strum = "0.27.1"
strum_macros = "0.27.1"
local-ip-address = "0.6.5"
vrchat_osc = "1.2.0"
